--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.2</version>
+        <version>3.0.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>ch.climbd</groupId>
@@ -15,9 +15,9 @@
     <description>Hackernews clone for cycling news</description>
     <properties>
         <java.version>19</java.version>
-        <vaadin.version>24.0.0.beta5</vaadin.version>
-        <maven.versions.plugin>2.14.2</maven.versions.plugin>
-        <rome.rss.version>2.0.0</rome.rss.version>
+        <vaadin.version>24.0.0</vaadin.version>
+        <maven.versions.plugin>2.15.0</maven.versions.plugin>
+        <rome.rss.version>2.1.0</rome.rss.version>
         <browserstorage.version>1.0.0</browserstorage.version>
         <jpushover.version>7.0.2</jpushover.version>
     </properties>
